# hpci

./: .envrc  .gitignore  LICENSE  README.md  cabal.project  flake.nix  hie.yaml  hpci.cabal  makefile
.github/workflows/: CI.yaml  build-pbs.yml  build-test.yaml  push.yaml  test.yaml
app/: Main.hs
ci/: Dockerfile  entrypoint.sh  run.sh  test_job.pbs
ci/slurm/: Dockerfile  entrypoint.sh  job.sh  slurm.conf
src/: Cli.hs  Exec.hs  Helpers.hs  Schedule.hs
test/: Spec.hs
test/integration/: Dockerfile
