cabal-version:   2.4
name:            hpci
version:         0
license:         GPL-3.0-or-later
build-type:      Simple
license-file:    LICENSE
author:          ignatiusm
maintainer:      ignatiusm <i.menzies@garvan.org.au>
copyright:       2024 ignatiusm
tested-with:     GHC ==8.6.5 || ==8.8.3 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/hpci#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/hpci.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib
  build-depends:
    , containers
    , mtl

executable hpci-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , hpci
    , bytestring
    , filepath
    , libssh2
    , optparse-applicative
    , containers
    , text
    
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite hpci-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , hpci
    , QuickCheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark hpci-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , hpci

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
